# cex-dex-arb

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  pairs.yaml
scripts/: run_bot.py  run_scanner.py
src/: main.py
src/core/: config.py  constants.py  types.py
src/dashboard/: app.py
src/dashboard/templates/: dashboard.html
src/db/: models.py  storage.py
src/execution/: arb_executor.py  cex_executor.py  dex_executor.py  flashbots.py
src/risk/: manager.py
src/scanner/: cex_scanner.py  dex_scanner.py  opportunity.py
