[project]
name = "cex-dex-arb"
version = "0.1.0"
description = "High-frequency CEX-DEX arbitrage bot with MEV protection"
requires-python = ">=3.10"
dependencies = [
    "web3>=7.0.0",
    "python-binance>=1.0.19",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
